# battery

./: .clang-tidy  .gitignore  .gitmodules  .hdoc.toml  CMakeLists.txt  Doxyfile  LICENSE  README.md  battery.toml  conanfile.py  conanfile.txt  premake5.lua  update-allegro5-binaries.bat
battery_cli/: CMakeLists.txt  main.cpp
battery_cli/include/: Error.h  Project.h  ProjectGenerator.h  app.h  battery_cli.h  config.h  console.h  messages.h  pch.hpp  scripts.h  tools.h
battery_cli/resources/templates/: CMakeLists.txt  _version.txt  battery.toml  gitignore.txt
battery_cli/src/: Project.cpp  ProjectGenerator.cpp  app.cpp  cli_build.cpp  cli_configure.cpp  cli_new.cpp  cli_run.cpp  console.cpp  main.cpp  scripts.cpp  tools.cpp
battery_embed/: CMakeLists.txt  battery_embed.cpp
docs/: CLI11_8hpp_source.html  CMakeLists.txt  Doxyfile.in  Doxyfile_template  all_8hpp_source.html  annotated.html  annotated_dup.js  any_8hpp_source.html  api_2std_2tuple_8hpp_source.html  api_2std_2variant_8hpp_source.html  api_8hpp_source.html  application_8hpp_source.html  array_8hpp_source.html  async__worker_8hpp_source.html  base64_8hpp_source.html  battery_2extern_2json_8hpp_source.html  battery_2format_8hpp_source.html  battery_2map_8hpp_source.html  battery_2string_8hpp_source.html  battery_8hpp_source.html  battery_concepts.md  binary_2ptr_8hpp_source.html  binary_2read_8hpp_source.html  binary_2skip_8hpp_source.html  binary_2write_8hpp_source.html  binary_8hpp_source.html  binary__exceptions_8hpp_source.html  bit__array_8hpp_source.html  button_8hpp_source.html  byte_8hpp_source.html  bytearray_8hpp_source.html  cache_8hpp_source.html  classCLI_1_1App-members.html  classCLI_1_1App.html  classCLI_1_1App.js  classCLI_1_1ArgumentMismatch-members.html  classCLI_1_1ArgumentMismatch.html  classCLI_1_1AsNumberWithUnit-members.html  classCLI_1_1AsNumberWithUnit.html  classCLI_1_1AsSizeValue-members.html  (+2149 more)
docs/d0/d00/: classnlohmann_1_1detail_1_1json__sax__acceptor-members.html  main_8hpp_source.html
docs/d0/d14/: structnlohmann_1_1detail_1_1is__compatible__integer__type__impl_3_01RealIntegerType_00_01Compatie5920c849e839ebb9f8c57349c900796.html  structnlohmann_1_1detail_1_1is__compatible__integer__type__impl_3_01RealIntegerType_00_01Compatie5920c849e839ebb9f8c57349c900796.js
docs/d0/d18/: structtl_1_1detail_1_1default__constructor__tag-members.html
docs/d0/d1e/: structsemver_1_1from__chars__result.html  structsemver_1_1from__chars__result.js
docs/d0/d20/: structinja_1_1LexerConfig.html  structinja_1_1LexerConfig.js
docs/d0/d23/: classinja_1_1BlockStatementNode.html  classinja_1_1BlockStatementNode.js
docs/d0/d30/: structmagic__enum_1_1detail_1_1enable__if__enum_3_01true_00_01T_00_01R_01_4-members.html
docs/d0/d34/: classnlohmann_1_1detail_1_1parser-members.html
docs/d0/d39/: structtl_1_1detail_1_1expected__operations__base-members.html
docs/d0/d3d/: structnlohmann_1_1detail_1_1has__from__json_3_01BasicJsonType_00_01T_00_01enable__if__t_3_01_9is3ee028c64c76c768be45996bb13fc9c5.html  structnlohmann_1_1detail_1_1has__from__json_3_01BasicJsonType_00_01T_00_01enable__if__t_3_01_9is3ee028c64c76c768be45996bb13fc9c5.js
docs/d0/d3f/: structtl_1_1detail_1_1expected__move__base_3_01T_00_01E_00_01false_01_4.html
docs/d0/d45/: classCLI_1_1RequiredError-members.html  classinja_1_1ForObjectStatementNode.html  classinja_1_1ForObjectStatementNode.js
docs/d0/d4b/: structCLI_1_1detail_1_1element__type.html  structCLI_1_1detail_1_1element__type.js
docs/d0/d4e/: structinja_1_1FunctionStorage_1_1FunctionData-members.html
docs/d0/d50/: md_docs_getting_started.html
docs/d0/d52/: structtl_1_1detail_1_1expected__delete__ctor__base.html
docs/d0/d55/: structtl_1_1detail_1_1expected__delete__assign__base.html
docs/d0/d57/: structtl_1_1detail_1_1expected__delete__ctor__base_3_01T_00_01E_00_01true_00_01false_01_4-members.html
docs/d0/d5f/: classnlohmann_1_1detail_1_1json__reverse__iterator-members.html
docs/d0/d61/: structCLI_1_1is__copyable__ptr-members.html
docs/d0/d62/: classb_1_1tray_1_1synced__toggle-members.html
docs/d0/d67/: structtl_1_1detail_1_1is__swappable.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+106 more)
docs/subdir/: topic1.md
examples/: CMakeLists.txt
examples/BatteryApp/: CMakeLists.txt
examples/GraphicsExample/: CMakeLists.txt
examples/Lockfile/: CMakeLists.txt
examples/PythonEmbed/: CMakeLists.txt
examples/TrayIconAnimated/: CMakeLists.txt
examples/core/: CMakeLists.txt
examples/example_embed/: CMakeLists.txt
examples/graphics/: CMakeLists.txt
examples/gui/: CMakeLists.txt
examples/python/: CMakeLists.txt
examples/tray_icon_animated/: CMakeLists.txt
src/: CMakeLists.txt  Core.cpp  DefaultShaders.cpp  Engine.cpp  Exception.cpp  Graphics.cpp  StringUtils.cpp  main.cpp  pch.cpp
src/Battery/: Core.cpp  DefaultShaders.cpp  Engine.cpp  Exception.cpp  Graphics.cpp  StringUtils.cpp  imgui_impl_allegro5.cpp
src/Core/: AllegroContext.cpp  AllegroWindow.cpp  Application.cpp  ApplicationEvents.cpp  Event.cpp  ImGuiLayer.cpp  Window.cpp
src/Platform/: API.cpp  Dialog.cpp
src/Renderer/: AllegroBitmap.cpp  Bitmap.cpp  Renderer2D.cpp  ShaderProgram.cpp
src/Utils/: FileUtils.cpp  ImGuiCompressor.cpp  ImGuiUtils.cpp  MemoryUtils.cpp  NetUtils.cpp  TimeUtils.cpp
src/clip/: clip.cpp  clip_none.cpp  clip_win.cpp  clip_x11.cpp  image.cpp
src/core/: CMakeLists.txt
src/graphics/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/python/: CMakeLists.txt
src/src/: application.cpp  constants.cpp  process.cpp  resource.cpp  signal.cpp
src/tests/: CMakeLists.txt  application.cpp  filesystem.cpp  lockfile.cpp
(+1413 files in other folders)
